# glowupbuddy

./: .gitignore  README.md
backend/: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
backend/agents/: plan_composer.py  voice_intake.py
backend/config/: settings.py
backend/models/: bingo.py  extraction.py  plan.py  user.py
backend/routes/: health.py  telegram.py
backend/scripts/: obsidian_sync.py  seed_bingo.py  setup_calendar_auth.py  setup_user.py
backend/services/: agent.py  calendar.py
backend/tests/: test_plan_composer.py
backend/tools/: mongo_tools.py  obsidian_tools.py
backend_adk/: main.py  pyproject.toml
backend_adk/agents/: data_fetcher_agents.py  plan_composer_agent.py  voice_intake_agent.py
backend_adk/config/: database.py
backend_adk/flows/: morning_flow.py
backend_adk/routes/: telegram.py
backend_adk/services/: bingo.py  intent_router.py  obsidian_tasks.py  telegram_sender.py  user_profile.py
backend_adk/tools/: calendar_tools.py
frontend/: Glow-Up Buddy App.html  app.jsx
