[project]
name = "backend-adk"
version = "0.1.0"
description = "GlowUpBuddy — Google ADK backend"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.8.0",
    "fastapi>=0.136.1",
    "google-adk>=0.5.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-cloud-secret-manager>=2.28.0",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
